Changelog
=========

0.7 (unreleased)
----------------

- Nothing changed yet.


0.6 (2012-10-19)
----------------

- cleaned up GA-viewlet [Jan Branbergen]
- Fix GA-viewlet when cookiecuttr is disabled [Jan Branbergen]


0.5 (2012-10-04)
----------------

- plone.resource is not used, removed dependency. Made override for anlytics viewlet [thepjot]
- javascript is not python, do not put commas at the end of arrays as it will break in ie [kingel]


0.4 (2012-09-25)
----------------

- Changed link functionality so it works with external links [ralphjacobs].


0.3 (2012-09-25)
----------------

- Nothing changed yet.


0.2 (2012-09-24)
----------------

- Nothing changed yet.


0.1 (2012-09-24)
----------------

- Package created using templer
  []