@@ -1,18 +1,49 @@
 [buildout]
-extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.1.x.cfg
+extends = http://dist.plone.org/release/4.2-latest/versions.cfg
+find-links =
+    http://dist.plone.org/thirdparty/
+    http://dist.plone.org/release/4.2-latest/
 
 package-name = collective.cookiecuttr
 
-parts += omelette
+parts +=
+    instance
+    test
+    coverage
+    report
+    omelette
+
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+eggs =
+    Plone
+    collective.cookiecuttr [test]
+environment-vars = zope_i18n_compile_mo_files true
 
 [test]
-recipe = zc.recipe.testrunner
-eggs =
-    ${instance:eggs}
-    collective.cookiecuttr [test]
-defaults = ['-s', '${buildout:package-name}']
+recipe = collective.xmltestreport
+eggs = collective.cookiecuttr [test]
+script = test
+defaults = ['--auto-color', '--auto-progress', '--xml', '-s', '${buildout:package-name}']
 
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
+
+[coverage]
+recipe = zc.recipe.egg
+eggs = coverage
+initialization =
+    include = '--source=${buildout:directory}/src'
+    sys.argv = sys.argv[:] + ['run', include, 'bin/test', '--all']
+
+[report]
+recipe = zc.recipe.egg
+eggs = coverage
+scripts = coverage=report
+initialization =
+    sys.argv = sys.argv[:] + ['html', '-i']
+
