@@ -1,0 +1,17 @@
+[buildout]
+extends = buildout.cfg
+parts =
+   download
+   install
+   test
+eggs-directory = buildout-cache/eggs
+download-cache = buildout-cache/downloads
+
+[download]
+recipe = hexagonit.recipe.download
+url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstaller.tgz
+
+[install]
+recipe = collective.recipe.cmd
+on_install = true
+cmds = tar jxvf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
