@@ -4,7 +4,9 @@ Changelog
 0.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added Jan and Ralph to the contributors, thanks!
+- Started with test
+- Travis setup
 
 
 0.6 (2012-10-19)
